--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -1,13 +1,13 @@
 # configurando conexão com MySql!
 
-# url do banco db
-spring.datasource.url =
+# url do banco db - Obrigatório!
+spring.datasource.url = jdbc:mysql://localhost:3306/order_service_db?useTimezone=true&serverTimezone=UTC
 
 # username
-spring.datasource.username =
+spring.datasource.username = root
 
 # senha
-spring.datasource.password =
+spring.datasource.password = Luender@2025
 
 # permitir que o Hibernate crie e atualize tabelas automaticamente
 spring.jpa.hibernate.ddl-auto=update
